# spotify-json

./: .gitmodules  .travis.yml  BUILD  CMakeLists.txt  LICENSE  NOTICE  README.md  WORKSPACE  appveyor.yml  json_buffer.hpp  json_escape.hpp  json_key.hpp  json_locale.hpp  json_macros.hpp  json_pair.hpp  json_writer.hpp  main.cpp  workspace.bzl
.appveyor/: build.cmd  install.cmd  test.cmd
.github/workflows/: all.yml
.travis/: install_linux.sh  install_osx.sh
bazel/: boost.BUILD
benchmark/: CMakeLists.txt  benchmark.hpp  benchmark_number.cpp  benchmark_object.cpp  benchmark_string.cpp
benchmark/include/spotify/json/benchmark/: benchmark.hpp
benchmark/src/: benchmark_boolean.cpp  benchmark_escape.cpp  benchmark_main.cpp  benchmark_number.cpp  benchmark_object.cpp  benchmark_skip.cpp  benchmark_string.cpp
cmake/: AddBoostTests.cmake  Join.cmake
detail/: json_escape.hpp  json_locale.hpp  json_macros.hpp
doc/: api.md  codec.md  writer.md
ext/: json_boost.hpp  json_std.hpp
fuzzers/: fuzz_decode.cpp
include/spotify/: json.hpp
include/spotify/json/: boost.hpp  buffer.hpp  codec.hpp  decode.hpp  decode_context.hpp  decode_exception.hpp  decoding_context.hpp  default_codec.hpp  encode.hpp  encode_context.hpp  encode_decode.hpp  encode_exception.hpp  encoded_value.hpp  encoding_context.hpp  error.hpp  json.hpp  key.hpp  standard.hpp  writer.hpp
include/spotify/json/codec/: any.hpp  any_codec.hpp  any_value.hpp  array.hpp  boolean.hpp  boost.hpp  cast.hpp  chrono.hpp  codec.hpp  codec_interface.hpp  default_as.hpp  empty_as.hpp  enumeration.hpp  eq.hpp  equals.hpp  ignore.hpp  integer.hpp  lenient.hpp  map.hpp  null.hpp  number.hpp  object.hpp  omit.hpp  one_of.hpp  optional.hpp  raw.hpp  real.hpp  smart_ptr.hpp  standard.hpp  string.hpp  transform.hpp  tuple.hpp
include/spotify/json/detail/: bitset.hpp  char_traits.hpp  cpuid.hpp  decode_helpers.hpp  decoding_helpers.hpp  encode_helpers.hpp  encode_integer.hpp  encoding_helpers.hpp  escape.hpp  field_registry.hpp  iterator.hpp  key.hpp  locale.hpp  macros.hpp  pair.hpp  primitive_encoder.hpp  skip.hpp  skip_chars.hpp  skip_value.hpp  stack.hpp  std.hpp  writer.hpp
include/spotify/json/extension/: boost.hpp  std.hpp
src/: decode_context.cpp  decode_exception.cpp  dummy.cpp  encode_context.cpp  encode_exception.cpp  encoded_value.cpp
src/codec/: any_value.cpp  boolean.cpp  number.cpp  object.cpp  string.cpp
src/detail/: bitset.cpp  decode_helpers.cpp  encode_helpers.cpp  encode_integer.cpp  escape.cpp  escape_common.hpp  escape_sse42.cpp  field_registry.cpp  skip.cpp  skip_chars.cpp  skip_chars_common.hpp  skip_chars_sse42.cpp  skip_sse42.cpp  skip_value.cpp
test/: CMakeLists.txt  only_true.hpp  test_any.cpp  test_array.cpp  test_boolean.cpp  test_boost.cpp  test_buffer.cpp  test_cast.cpp  test_char_traits.cpp  test_chrono.cpp  test_decoding_context.cpp  test_decoding_helpers.cpp  test_default_as.cpp  test_empty_as.cpp  test_encode_decode.cpp  test_encoding_context.cpp  test_encoding_helpers.cpp  test_enumeration.cpp  test_eq.cpp  test_equals.cpp  test_escape.cpp  test_ignore.cpp  test_json_key.cpp  test_json_pair.cpp  test_key.cpp  test_lenient.cpp  test_main.cpp  test_map.cpp  test_null.cpp  test_number.cpp  test_object.cpp  test_omit.cpp  test_one_of.cpp  test_pair.cpp  test_primitive_encoder.cpp  test_raw.cpp  test_real.cpp  test_smart_ptr.cpp  test_string.cpp  test_transform.cpp  (+3 more)
test/include/spotify/json/test/: only_true.hpp
test/src/: test_any.cpp  test_any_codec.cpp  test_any_value.cpp  test_array.cpp  test_bitset.cpp  test_boolean.cpp  test_boost.cpp  test_cast.cpp  test_char_traits.cpp  test_chrono.cpp  test_codec_interface.cpp  test_decode.cpp  test_decode_context.cpp  test_decode_helpers.cpp  test_decoding_context.cpp  test_decoding_helpers.cpp  test_empty_as.cpp  test_encode.cpp  test_encode_context.cpp  test_encode_decode.cpp  test_encode_helpers.cpp  test_encode_integer.cpp  test_encoded_value.cpp  test_encoding_context.cpp  test_encoding_helpers.cpp  test_enumeration.cpp  test_eq.cpp  test_escape.cpp  test_ignore.cpp  test_macros.cpp  test_main.cpp  test_map.cpp  test_null.cpp  test_number.cpp  test_object.cpp  test_omit.cpp  test_one_of.cpp  test_optional.cpp  test_raw.cpp  test_skip_chars.cpp  (+7 more)
